--- a/README
+++ b/README
@@ -10,6 +10,11 @@
 		http://www.appcelerator.com/
 - iOS SDK 4.3 or higher
 		http://developer.apple.com/
+- LineaPro
+		http://www.ipcprint.com/
+- iOS device
+	+ iPod 3rd Generation or higher
+	+ iPhone 3G or higher
 
 
 -------------
