--- a/README
+++ b/README
@@ -13,7 +13,7 @@
 - LineaPro
 		http://www.ipcprint.com/
 - iOS device
-	+ iPod 3rd Generation or higher
+	+ iPod Touch 3rd Generation or higher
 	+ iPhone 3G or higher
 
 
