--- a/README
+++ b/README
@@ -7,14 +7,26 @@
  Requirements
 --------------
 - Appcelerator Titanium SDK 1.7 or higher
-		http://www.appcelerator.com/
+	http://www.appcelerator.com/
+	
 - iOS SDK 4.3 or higher
-		http://developer.apple.com/
+	http://developer.apple.com/
+	
 - LineaPro
-		http://www.ipcprint.com/
+	http://www.ipcprint.com/
+	
 - iOS device
 	+ iPod Touch 3rd Generation or higher
 	+ iPhone 3G or higher
+	
+- LineaPRO TiModule
+	linea-iphone-0.1.zip
+
+
+--------------
+ Instructions
+--------------
+COMING SOON!
 
 
 -------------
