--- a/README
+++ b/README
@@ -3,6 +3,10 @@
 +=====================================================================================+
 
 
+*****NOTE*****(July 7, 2011)
+THERE WILL BE AN ENTIRE LIST OF EVENTS/USE CASES/ETC.  I AM CURRENTLY WORKING ON THE DOCUMENTATION
+
+
 --------------
  Requirements
 --------------
