--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
 
 *****NOTE*****(July 7, 2011)
-THERE WILL BE AN ENTIRE LIST OF EVENTS/USE CASES/ETC.  I AM CURRENTLY WORKING ON THE DOCUMENTATION
+THERE WILL BE AN ENTIRE LIST OF EVENTS/USE CASES/ETC.  I AM CURRENTLY WORKING ON THE DOCUMENTATION.
 
 
 --------------
