--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 +                    Appcelerator Titanium Module for the LineaPro                    +
 +=====================================================================================+
 
-*****NOTE*****(July 14, 2011)
+*****UPDATE*****(July 14, 2011)
 I'm preparing to push up the mag stripe stuff. Are you ready? :)
 
 *****UPDATE*****(July 7, 2011)
